# Symbolic_Math_DSL_with_Cpp20

./: .gitignore  CMakeLists.txt  README.md  check.sh  run.sh
include/: concepts.hpp  expressions.hpp  utility.hpp
src/: main.cpp
test/: math_expr_test.cpp
